--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.appbusters.robinkamboj.senseitall"
@@ -10,7 +10,7 @@ android {
         versionCode 4
         versionName "2.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        // Enabling multidex support.
+        // Enabling multi dex support.
         multiDexEnabled true
     }
     buildTypes {
@@ -26,18 +26,39 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+
+    //butterknife
+    compile "com.jakewharton:butterknife:$rootProject.ext.butterKnifeVersion"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.ext.butterKnifeVersion"
+
+    //android dependencies
+    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support:support-vector-drawable:$rootProject.ext.supportLibraryVersion"
+    compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
+    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
+
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.archLifecycleVersion"
+    compile "android.arch.lifecycle:runtime:$rootProject.ext.archLifecycleVersion"
+    compile "android.arch.lifecycle:extensions:$rootProject.ext.archLifecycleVersion"
+
+    compile "android.arch.persistence.room:runtime:$rootProject.roomLifecycleVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomLifecycleVersion"
+
+    //dagger2 di
+    compile "com.google.dagger:dagger:$rootProject.ext.dagger2Version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2Version"
+
     compile 'com.wang.avi:library:2.1.3'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:design:25.3.1'
     compile 'com.github.yongjhih:mismeter:1.0.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.willowtreeapps.spruce:spruce-android:1.0.0'
+    compile 'com.willowtreeapps.spruce:spruce-android:1.0.1'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.google.android.gms:play-services:10.2.0'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+    compile 'com.android.support:multidex:1.0.2'
     testCompile 'junit:junit:4.12'
 }
