removed unnecessary layout files dependencies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,16 +42,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activities.list.ListActivity" android:theme="@style/AppTheme" android:screenOrientation="portrait"/>
-        <activity android:name=".view.activities.main.MainActivity" android:theme="@style/AppTheme"/>
         <activity android:name=".view.activities.sensors.camera.CameraActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.gsm.GSMActivity" android:screenOrientation="portrait" />
-        <activity android:name=".view.activities.sensors.battery.BatteryActivity" android:label="@string/title_activity_battery" android:theme="@style/AppTheme" />
-        <activity android:name=".view.activities.sensors.vibrator.VibratorActivity" />
-        <activity android:name=".view.activities.sensors.cpu.CPUActivity" />
+        <activity android:name=".view.activities.sensors.battery.BatteryActivity" android:label="@string/title_activity_battery" android:theme="@style/AppTheme" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.vibrator.VibratorActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".view.activities.sensors.cpu.CPUActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.light.LightActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.activities.sensors.proximity.ProximityActivity" />
+        <activity android:name=".view.activities.sensors.proximity.ProximityActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.flash.FlashActivity" android:screenOrientation="portrait" />
-        <activity android:name=".view.activities.sensors.os.AndroidOSActivity" />
+        <activity android:name=".view.activities.sensors.os.AndroidOSActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.magnetic.MagneticActivity" android:screenOrientation="portrait" />
 
         <receiver android:name=".view.activities.sensors.battery.MyReceiver">
@@ -75,8 +74,8 @@
 
         <meta-data android:name="com.sec.android.support.multiwindow" android:value="true" />
         <meta-data android:name="com.google.android.geo.API_KEY" android:value="@string/google_maps_key" />
-        <activity android:name=".view.activities.sensors.maps.MapsActivity" android:label="@string/title_activity_maps" />
-        <activity android:name=".view.activities.sensors.nfc.NFCActivity" />
+        <activity android:name=".view.activities.sensors.maps.MapsActivity" android:label="@string/title_activity_maps"  android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.nfc.NFCActivity"  android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.compass.CompassActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.multi_touch.MultiTouchActivity" android:screenOrientation="portrait">
             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable" />
@@ -84,35 +83,35 @@
                 <category android:name="android.intent.category.MULTIWINDOW_LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activities.sensors.step_detector.StepDetectorActivity" />
-        <activity android:name=".view.activities.sensors.step_counter.StepCounterActivity" />
+        <activity android:name=".view.activities.sensors.step_detector.StepDetectorActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.step_counter.StepCounterActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.fingerprint.FingerprintActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.camera_secondary.CameraSecondaryActivity" android:screenOrientation="portrait" />
-        <activity android:name=".view.activities.sensors.temperature.TemperatureActivity" />
-        <activity android:name=".view.activities.sensors.pressure.PressureActivity" />
-        <activity android:name=".view.activities.sensors.radio.RadioActivity" />
-        <activity android:name=".view.activities.sensors.rotation.RotationActivity" />
-        <activity android:name=".view.activities.sensors.humidity.HumidityActivity" />
+        <activity android:name=".view.activities.sensors.temperature.TemperatureActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.pressure.PressureActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.radio.RadioActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.rotation.RotationActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.humidity.HumidityActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.bluetooth.BluetoothActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.wifi.WiFiActivity" android:screenOrientation="portrait" />
-        <activity android:name=".view.activities.sensors.screen.ScreenActivity" />
-        <activity android:name=".view.activities.sensors.sound.SoundActivity" />
-        <activity android:name=".view.activities.sensors.gyro.GyroscopeActivity" />
+        <activity android:name=".view.activities.sensors.screen.ScreenActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.sound.SoundActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.gyro.GyroscopeActivity" android:screenOrientation="portrait" />
         <activity android:name=".view.activities.sensors.accelerometer.AccelerometerTestActivity" android:screenOrientation="portrait" />
-        <activity android:name=".view.activities.sensors.accelerometer.AccelerometerActivity" />
-        <activity android:name=".view.activities.sensors.linear_acceleration.LinearAccelerationActivity" />
-        <activity android:name=".view.activities.sensors.gravity.GravityActivity" />
-        <activity android:name=".view.activities.sensors.usb.USBActivity">
+        <activity android:name=".view.activities.sensors.accelerometer.AccelerometerActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.linear_acceleration.LinearAccelerationActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.gravity.GravityActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.usb.USBActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activities.sensors.mic.MicrophoneActivity" />
-        <activity android:name=".view.activities.sensors.stationary_detect.StationaryDetectActivity" />
-        <activity android:name=".view.activities.sensors.motion_detect.MotionDetectActivity" />
-        <activity android:name=".view.activities.sensors.heart_beat.HeartBeatActivity" />
-        <activity android:name=".view.activities.sensors.audio_video.AudioVideoActivity"/>
-        <activity android:name=".view.activities.about.AboutActivity" />
+        <activity android:name=".view.activities.sensors.mic.MicrophoneActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.stationary_detect.StationaryDetectActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.motion_detect.MotionDetectActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.heart_beat.HeartBeatActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.sensors.audio_video.AudioVideoActivity" android:screenOrientation="portrait" />
+        <activity android:name=".view.activities.about.AboutActivity" android:screenOrientation="portrait" />
     </application>
 
 </manifest>
