--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,26 +39,14 @@ dependencies {
     compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support:support-vector-drawable:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayoutVersion"
-    compile "com.squareup.retrofit2:retrofit:$rootProject.ext.retrofitVersion"
 
-    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.ext.archLifecycleVersion"
-    compile "android.arch.lifecycle:runtime:$rootProject.ext.archLifecycleVersion"
-    compile "android.arch.lifecycle:extensions:$rootProject.ext.archLifecycleVersion"
-
-    compile "android.arch.persistence.room:runtime:$rootProject.roomLifecycleVersion"
-    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomLifecycleVersion"
-
-    //dagger2 di
-    compile "com.google.dagger:dagger:$rootProject.ext.dagger2Version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2Version"
 
     compile 'com.wang.avi:library:2.1.3'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.github.yongjhih:mismeter:1.0.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:4.2.0'
     compile 'com.willowtreeapps.spruce:spruce-android:1.0.1'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.google.android.gms:play-services:11.8.0'
     compile 'com.android.support:multidex:1.0.2'
     testCompile 'junit:junit:4.12'
 }
