--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
         android:required="false" />
     <uses-feature
         android:name="android.hardware.fingerprint"
-        android:required="false"/>
+        android:required="false" />
 
     <application
         android:name=".SensorApplication"
@@ -262,7 +262,8 @@
         <activity
             android:name=".view.about.AboutActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".view.main.MainActivity"/>
+        <activity android:name=".view.main.MainActivity" />
+        <activity android:name=".view.detail_activity.DetailActivity"></activity>
     </application>
 
 </manifest>
