back camera preview test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
         android:name="android.permission.ACCESS_FINE_LOCATION"
         android:required="false" />
 
+
+    <uses-feature android:name="android.hardware.camera2.autofocus"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
