--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,10 +59,14 @@
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
         android:required="false" />
+    <!--<uses-permission android:name="android.permission.CAMERA" />-->
+    <!--<uses-permission android:name="android.permission.FLASHLIGHT" />-->
 
 
-    <uses-feature android:name="android.hardware.camera2.autofocus"
-        android:required="false" />
+    <!--<uses-feature android:name="android.hardware.camera.flash"-->
+        <!--android:required="false"/>-->
+    <!--<uses-feature android:name="android.hardware.camera2.autofocus"-->
+        <!--android:required="false" />-->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
