--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'io.github.inflationx:calligraphy3:3.0.0'
     compile 'io.github.inflationx:viewpump:1.0.0'
     compile 'com.github.anastr:speedviewlib:1.2.0'
+    compile 'com.github.antwankakki:FabricView:latest'
 
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.yongjhih:mismeter:1.0.0'
