--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     compile 'com.github.anastr:speedviewlib:1.2.0'
     compile 'com.github.antwankakki:FabricView:latest'
 
+    implementation 'com.sdsmdg.harjot:croller:1.0.7'
+
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.github.yongjhih:mismeter:1.0.0'
     compile 'com.github.bumptech.glide:glide:4.2.0'
